2001-11-10  Jody Goldberg <jgoldberg@home.com>

	* src/workbook-control-gui.c (workbook_menu_format_column) :
	  make col menu consistent with row menu.
	* src/GNOME_Gnumeric.xml : ditto.

2001-11-10  Jody Goldberg <jgoldberg@home.com>

	* src/item-cursor.c (item_cursor_draw) : make block cursors more
	  visually appealing.

	* src/workbook-control-gui.c (sheet_action_add_sheet) : restore the
	  focus to the current sheet so that the new sheet does not get the
	  key events.

	* src/workbook-edit.c (wbcg_editing_expr) : delete.

2001-11-09  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=62131
	* src/commands.c (cmd_colrow_outline_change) : The logic is to funky
	  for my health.  I hope this doesn't screw something else up.

2001-11-09  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-object-widget.c (sheet_widget_checkbox_toggled) : Use
	  expr_tree_get_range.
	(cb_checkbox_set_focus) : rework to use dialog::set-focus.
	(cb_checkbox_config_clicked) : use gnumeric_expr_entry_parse.
	(sheet_widget_checkbox_user_config) : set up the new focus handler.

	* src/sheet-control-gui.c (scg_object_nudge) : new.
	(scg_object_update_bbox) : no need to pass the view.
	(scg_object_move) : ditto.
	(cb_slide_handler) : ditto.

	* src/parser.y (force_explicit_sheet_references) : new.
	(parse_ref_or_string) : Support forcing an absolute ref.
	(gnumeric_expr_parser) : remove the individual flags and send in a bit
	mask.

	* src/item-grid.c (item_grid_draw_merged_range) : filted invisble
	  ranges.
	(item_grid_draw) : handle merges hidden by row, and support sliced
	  merges in the future.

	* src/sheet.c (sheet_col_row_fit_gutter) : New max_outline semantics
	  remove need for special case.
	(sheet_colrow_get) : new utility.

	* src/item-bar.c (ib_compute_pixels_from_indent) : Adjust to new
	  outline_level semantics.  We now implicitly add 1 when needed.
	  rather than tweaking it at startup.
	(item_bar_draw) : ditto.
	(outline_button_press) : ditto.