@@ -1,3 +1,8 @@
+2001-11-11  Jody Goldberg <jgoldberg@home.com>
+
+	* src/print.c (print_page) : fix horiz/vert centering in the presence
+	  of scaling.
+
 2001-11-10  Jody Goldberg <jgoldberg@home.com>
 
 	* src/workbook-control-gui.c (workbook_menu_format_column) :
